--- a/client/index.html
+++ b/client/index.html
@@ -346,8 +346,8 @@
         <div class="btn icon" ng-disabled="!canvas.canUndo()" ng-click="canvas.undo()"><img src="/img/icon_undo.png"></div>
         <div class="btn icon" ng-disabled="!canvas.canRedo()" ng-click="canvas.redo()"><img src="/img/icon_redo.png"></div>
         <!--Copy, Paste Buttons-->
-        <div class="btn icon" ng-click="copy()"><img src="/img/icon_copy.png"></div>
-        <div class="btn icon" ng-click="paste()"><img src="/img/icon_paste.png"></div>
+        <div class="btn icon" ng-disabled="!canvas.canCopy()" g-click="copy()"><img src="/img/icon_copy.png"></div>
+        <div class="btn icon" ng-disabled="!canvas.canPaste()" ng-click="paste()"><img src="/img/icon_paste.png"></div>
       </div>
 
     </div>
@@ -387,7 +387,7 @@
 
     </div>
     <div class="modal-footer">
-      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+      <button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="close_editor()">Close</button>
       <button class="btn btn-primary" data-dismiss="modal" ng-click="save_editor()">Save Changes</button>
     </div>
   </div>
