--- a/client/index.html
+++ b/client/index.html
@@ -346,7 +346,7 @@
         <div class="btn icon" ng-disabled="!canvas.canUndo()" ng-click="canvas.undo()"><img src="/img/icon_undo.png"></div>
         <div class="btn icon" ng-disabled="!canvas.canRedo()" ng-click="canvas.redo()"><img src="/img/icon_redo.png"></div>
         <!--Copy, Paste Buttons-->
-        <div class="btn icon" ng-disabled="!canvas.canCopy()" g-click="copy()"><img src="/img/icon_copy.png"></div>
+        <div class="btn icon" ng-disabled="!canvas.canCopy()" ng-click="copy()"><img src="/img/icon_copy.png"></div>
         <div class="btn icon" ng-disabled="!canvas.canPaste()" ng-click="paste()"><img src="/img/icon_paste.png"></div>
       </div>
 
