Continuing the refactor to rule creation

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,8 @@
   <script src="./src/models/ContentManager.js"></script>
   <script src="./src/models/Sprite.js"></script>
   <script src="./src/models/Rule.js"></script>
+  <script src="./src/models/FlowGroupRule.js"></script>
+  <script src="./src/models/EventGroupRule.js"></script>
   <script src="./src/models/ActorDefinition.js"></script>
   <script src="./src/models/ProgrammableSprite.js"></script>
   <script src="./src/models/SquareMaskSprite.js"></script>
