Renamed ProgrammableSprite to ActorSprite, because it made no sense before.

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
   <script src="./src/models/Rule.js"></script>
   <script src="./src/models/GroupRule.js"></script>
   <script src="./src/models/ActorDefinition.js"></script>
-  <script src="./src/models/ProgrammableSprite.js"></script>
+  <script src="./src/models/ActorSprite.js"></script>
   <script src="./src/models/SquareMaskSprite.js"></script>
   <script src="./src/models/HandleSprite.js"></script>
   <script src="./src/models/PixelArtCanvas.js"></script>
