--- a/client/src/angular/controls_controller/recording.html
+++ b/client/src/angular/controls_controller/recording.html
@@ -3,9 +3,10 @@
 	  <h4>When the picture matches and:</h4>
 	  <ul>
 		<div ng-repeat="(ref,descriptor) in recording_descriptors()">
-		  <li class="condition" ng-show="descriptor.appearance"><span ng-bind-html-unsafe="html_for_actor(ref,true)"></span> appearance is <span ng-bind-html-unsafe="html_for_appearance(ref)"></span></li>
+		  <li class="condition" ng-show="descriptor.appearance"><span ng-bind-html-unsafe="html_for_actor(ref,true)"></span> appearance is <span ng-bind-html-unsafe="html_for_appearance(ref)"></span><a ng-click="toggle_appearance_constraint(ref)">X</a></li>
 		  <li class="condition" ng-repeat="(variable, constraint) in descriptor.variableConstraints">
-				<span ng-bind-html-unsafe="html_for_actor(ref,true)"></span> variable <code>{{name_for_variable(variable)}}</code> is <select style="width:40px; font-weight:bold;" ng-model="constraint.comparator"><option value="=">=</option><option value="<"><</option><option value=">">></option></select> {{constraint.value}}
+			<span ng-bind-html-unsafe="html_for_actor(ref,true)"></span> variable <code>{{name_for_variable(variable)}}</code> is <select style="width:40px; font-weight:bold;" ng-model="constraint.comparator"><option value="=">=</option><option value="<"><</option><option value=">">></option></select> {{constraint.value}}
+			<a ng-click="toggle_variable_constraint(ref, variable)">X</a>
 		  </li>
 		</div>
 	  </ul>
@@ -15,7 +16,7 @@
 	  <ul>
 		<li class="action" ng-repeat="action in recording_actions()" ng-switch="action.type">
 		  <div ng-switch-when="move">
-			Move <span ng-bind-html-unsafe="html_for_actor(action.ref)"></span> to <img src="{{icon_for_move(action.delta)}}">
+			Move <span ng-bind-html-unsafe="html_for_actor(action.ref)"></span> to <img ng-src="{{icon_for_move(action.delta)}}">
 		  </div>
 
 		  <div ng-switch-when="appearance">
@@ -38,7 +39,7 @@
 		  </div>
 
 		  <div ng-switch-when="create">
-				Create a new <code><img src="{{icon_for_referenced_actor(action.ref)}}" width="26" height="26">{{name_for_referenced_actor(action.ref)}}</code>
+				Create a new <code><img ng-src="{{icon_for_referenced_actor(action.ref)}}" width="26" height="26">{{name_for_referenced_actor(action.ref)}}</code>
 		  </div>
 
 		</li>
