--- a/client/src/angular/pixel_art_controller.html
+++ b/client/src/angular/pixel_art_controller.html
@@ -41,6 +41,6 @@
 </div>
 
 <div class="modal-footer">
-  <button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="close_editor()">Close</button>
+  <button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="close_editor()">Close without Saving</button>
   <button class="btn btn-primary" data-dismiss="modal" ng-click="save_editor()">Save Changes</button>
 </div>
