--- a/client/index.html
+++ b/client/index.html
@@ -8,16 +8,38 @@
   </script>
   <script type="text/javascript" src="./src/async.js"></script>
 
-  <script src="./src/jquery.js"></script>
+  <!-- Jquery and Jquery UI -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.1.0/jquery.timeago.min.js"></script>
+  <link  href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/css/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+
+  <!-- Bootstrap -->
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.1.3/css/bootstrap-datepicker.css" rel="stylesheet">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.0.2/js/bootstrap-datepicker.min.js"></script>
+
+  <!-- Font CSS -->
+  <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- My CSS -->
+  <link href="/css/main.css" rel="stylesheet" media="screen">
+
+  <!-- Angular and AngularStrap -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.5/angular.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.5/angular-resource.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.1/angular-cookies.js"></script>
+
+  <!-- Actual App Code -->
+  
   <script src="./src/easeljs-NEXT.min.js"></script>
   <script src="./src/socket.io.js"></script>
-  <script src="./src/bootstrap.js"></script>
   <script src="./src/bootstrap-colorpicker.js"></script>
   <script src="./src/extensions.js"></script>
   <script src="./src/underscore.js"></script>
-
-  <link href="./src/jquery-ui.css" rel="stylesheet" type="text/css" />
-  <script src="./src/jquery-ui.min.js"></script>
 
 
   <script src="./src/models/XNARectangle.js"></script>
@@ -34,7 +56,6 @@
   <script src="./src/models/GameStage.js"></script>
   <script src="./src/models/GameManager.js"></script>
 
-  <script src="./src/angular.js"></script>
   <script src="./src/angular/directives.js"></script>
   <script src="./src/angular/controls_controller.js"></script>
   <script src="./src/angular/variables_controller.js"></script>
@@ -42,7 +63,6 @@
   <script src="./src/angular/pixel_art_controller.js"></script>
   <script src="./src/angular/library_controller.js"></script>
 
-  <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="/css/editor.css" rel="stylesheet" media="screen">
   <link href="/css/colorpicker.css" rel="stylesheet" media="screen">
 
